--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import NavBar from "../components/NavBar.astro";
 import "../styles/global.css";
 const { pageTitle } = Astro.props;
 ---
@@ -12,6 +13,7 @@ const { pageTitle } = Astro.props;
     <title>{pageTitle}</title>
   </head>
   <body>
+    <NavBar />
     <slot />
   </body>
 </html>
