--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,10 +1,11 @@
 ---
+import AboutHero from "../components/heros/About-Hero.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Ians3DP.au | About";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div>
-    <h1>About Us</h1>
+    <AboutHero />
   </div>
 </BaseLayout>
