--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,10 +1,11 @@
 ---
+import ContactHero from "../components/heros/contact-Hero.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Ians3DP.au | Contact";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div>
-    <h1>Contact Us</h1>
+    <ContactHero />
   </div>
 </BaseLayout>
