--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,9 @@
 ---
+import Hero from "../components/heros/Hero.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
-const pageTitle = "Ians3DP.au";
+const pageTitle = "Ians3DP.au | Home";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <div>
-    <h1>Welcome to</h1>
-    <h2>Ians 3D Printing Service</h2>
-  </div>
+  <Hero />
 </BaseLayout>
