--- a/src/pages/tags.astro
+++ b/src/pages/tags.astro
@@ -1,10 +1,11 @@
 ---
+import TagsHero from "../components/heros/Tags-Hero.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 const pageTitle = "Ians3DP.au | Tags";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div>
-    <h1>Tags</h1>
+    <TagsHero />
   </div>
 </BaseLayout>
