--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -1,10 +1,11 @@
 ---
+import BlogHero from "../../components/heros/Blog-Hero.astro";
 import BaseLayout from "../../layouts/BaseLayout.astro";
 const pageTitle = "Ians3DP.au | Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <div>
-    <h1>Blog</h1>
+    <BlogHero />
   </div>
 </BaseLayout>
