general adjustments on heros

--- a/src/components/heros/Blog-Hero.astro
+++ b/src/components/heros/Blog-Hero.astro
@@ -31,28 +31,13 @@
   }
 
   .hero-text h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: bold;
   }
 
   .hero-text p {
     font-size: 3rem;
-    line-height: 2.5rem;
-  }
-
-  .hero-btn {
-    font-size: 2rem;
-    text-decoration: none;
-    color: white;
-    background-color: rgb(115, 119, 52);
-    padding: 10px 30px;
-    border-radius: 8px;
-    margin-top: 10px;
-    display: inline-block;
-  }
-
-  .hero-btn:hover {
-    color: rgb(115, 119, 52);
-    background-color: white;
+    font-weight: bold;
+    line-height: 4.5rem;
   }
 </style>
