--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -7,7 +7,7 @@
         <a href='/' class='nav-link'>Home</a>
       </li>
       <li class='nav-item'>
-        <a href='products' class='nav-link'>Products</a>
+        <a href='products' class='nav-link'>Shop</a>
       </li>
       <li class='nav-item'>
         <a href='/blog' class='nav-link'>Blog</a>
@@ -72,6 +72,9 @@
 
   .nav-link:hover {
     color: darkgreen;
+    background-color: peachpuff;
+    margin: 5px;
+    padding: 15px;
   }
 
   .hamburger {
@@ -115,7 +118,7 @@
       background-color: rgb(115, 119, 52);
       width: 100%;
       text-align: center;
-      transition: 0.7s;
+      transition: 0.2s;
     }
 
     .nav-item {
