--- a/src/components/heros/Hero.astro
+++ b/src/components/heros/Hero.astro
@@ -29,16 +29,18 @@
   .hero-image .hero-text {
     color: white;
     text-align: center;
+    line-height: 3.5rem;
   }
 
   .hero-text h1 {
-    font-size: 4rem;
+    font-size: 3rem;
+
     font-weight: bold;
   }
 
   .hero-text p {
-    font-size: 3rem;
-    line-height: 2.5rem;
+    font-size: 2rem;
+    font-weight: bold;
   }
 
   .hero-btn {
