--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,7 +7,7 @@ const { pageTitle } = Astro.props;
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <link rel='icon' type='image/png' href='/favicon-32x32.png' />
     <meta name='viewport' content='width=device-width' />
     <meta name='generator' content={Astro.generator} />
     <title>{pageTitle}</title>
@@ -21,8 +21,11 @@ const { pageTitle } = Astro.props;
 </html>
 
 <style>
-  .container {
+  main {
     max-width: 1200px;
-    margin: 0 auto;
+  }
+  .container {
+    min-width: 300px;
+    margin: auto;
   }
 </style>
