--- a/src/components/heros/Hero.astro
+++ b/src/components/heros/Hero.astro
@@ -5,7 +5,7 @@
   <div class='hero-text'>
     <h1>Welcome to Ian's</h1>
     <p>3D Printing Service</p>
-    <a href='/products' class='hero-btn'>View Products</a>
+    <a href='/products' class='hero-btn'>View Shop</a>
   </div>
 </div>
 
@@ -48,7 +48,7 @@
     text-decoration: none;
     color: white;
     background-color: rgb(115, 119, 52);
-    padding: 10px 30px;
+    padding: 6px 20px;
     border-radius: 8px;
     margin-top: 10px;
     display: inline-block;
