--- a/src/components/NavBar.astro
+++ b/src/components/NavBar.astro
@@ -56,6 +56,7 @@
     padding: 0 24px;
   }
   .nav-menu {
+    font-size: 1.2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -67,14 +68,15 @@
   }
 
   .nav-link {
-    transition: 0.7s ease;
+    border-radius: 10px;
+    transition: 0.4s ease;
+    margin: 3px;
+    padding: 6px;
   }
 
   .nav-link:hover {
     color: darkgreen;
     background-color: peachpuff;
-    margin: 5px;
-    padding: 15px;
   }
 
   .hamburger {
