--- a/src/components/heros/Blog-Hero.astro
+++ b/src/components/heros/Blog-Hero.astro
@@ -3,8 +3,8 @@
 
 <div class='hero-image'>
   <div class='hero-text'>
-    <h1>Welcome to Ian's</h1>
-    <p>Blog</p>
+    <h1>Ian's Blog</h1>
+    <p>Just a place to put some thoughts</p>
   </div>
 </div>
 
@@ -36,8 +36,8 @@
   }
 
   .hero-text p {
-    font-size: 3rem;
-    font-weight: bold;
+    font-size: 2rem;
+
     line-height: 4.5rem;
   }
 </style>
