--- a/src/components/heros/About-Hero.astro
+++ b/src/components/heros/About-Hero.astro
@@ -14,7 +14,7 @@
         rgba(115, 119, 52, 0.2),
         rgba(115, 119, 52, 0.2)
       ),
-      url("../../images/heros/about.png");
+      url("../../images/heros/about.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
