--- a/src/components/heros/Hero.astro
+++ b/src/components/heros/Hero.astro
@@ -16,7 +16,7 @@
         rgba(115, 119, 52, 0.5),
         rgba(115, 119, 52, 0.5)
       ),
-      url("../../images/heros/hero.png");
+      url("../../images/heros/hero.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
