--- a/src/components/heros/Tags-Hero.astro
+++ b/src/components/heros/Tags-Hero.astro
@@ -14,7 +14,7 @@
         rgba(115, 119, 52, 0.5),
         rgba(115, 119, 52, 0.5)
       ),
-      url("../../images/heros/tags.png");
+      url("../../images/heros/tags.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
