--- a/src/components/heros/contact-Hero.astro
+++ b/src/components/heros/contact-Hero.astro
@@ -14,7 +14,7 @@
         rgba(115, 119, 52, 0.4),
         rgba(115, 119, 52, 0.4)
       ),
-      url("../../images/heros/contact.png");
+      url("../../images/heros/contact.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
