--- a/src/components/heros/Products-Hero.astro
+++ b/src/components/heros/Products-Hero.astro
@@ -15,7 +15,7 @@
         rgba(115, 119, 52, 0.5),
         rgba(115, 119, 52, 0.5)
       ),
-      url("../../images/heros/products.png");
+      url("../../images/heros/products.webp");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
